--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include header.html %}
-<article class="article">
-            <h2>{{page.title}}</h2>
-            {{ content }}
-</article>
+<section class="block__page">
+  <h2>{{page.title}}</h2>
+  {{ content }}
+</section>
 {% include footer.html %}
