--- a/_includes/pages_list.html
+++ b/_includes/pages_list.html
@@ -1,7 +1,7 @@
 {% for node in pages_list %}
   {% if group == null or group == node.group %}
     {% if page.url == node.url %}
-      <li class="nav__item active"><a href="{{node.url}}" class="active">{{node.title}}</a></li>
+      <li class="nav__item"><a href="{{node.url}}" class="active">{{node.title}}</a></li>
     {% else %}
       <li class="nav__item"><a href="{{node.url}}">{{node.title}}</a></li>
     {% endif %}
