--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -7,9 +7,9 @@
         <h2 class="article--headline"><a href="{{ post.url }}" title="Read the article '{{ post.title }}'">{{ post.title }}</a></h2>
         <span class="off-screen  {{ post.category }}">{{ post.category }}</span>
         {{ post.excerpt }}
-        <a href="{{ post.url }}" title="Read more">Read more &rarr; </a>
+        <p><a href="{{ post.url }}" title="Read more">Read more &rarr; </a></p>
         {% if post.tags %}
-            <div class="article__tags">
+            <div class="article__tags article__footer">
             {% for tag in post.tags %}
                 <span class="article--tag"><a href="/tags/#{{ tag | downcase | replace:' ','_' }}">#{{ tag }}</a></span>
             {% endfor %}
