--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -10,9 +10,17 @@
 {% for i in (1..tags_max) reversed %}
     {% for tag in site.tags %}
         {% if tag[1].size == i %}
-            <h2 id="{{ tag[0] | downcase | replace:' ','_' }}">{{ tag[0] }}</h2>
-
-        {% for post in tag.last %}<a href="{{ post.url }}">{{ post.title }}</a>{% if forloop.last %}{% else %} &bull; {% endif %}{% endfor %}
+            <article class="article__list">
+                <h3 id="{{ tag[0] | downcase | replace:' ','_' }}">{{ tag[0] }}</h3>
+                    <p>
+                    {% for post in tag.last %}
+                        <a href="{{ post.url }}">{{ post.title }}</a>
+                        {% if forloop.last %}
+                        {% else %} &bull; 
+                        {% endif %}
+                    {% endfor %}
+                    </p>
+            </article>
         {% endif %}
     {% endfor %}
 {% endfor %}
