--- a/assets/css/includes/_syntax.scss
+++ b/assets/css/includes/_syntax.scss
@@ -1,14 +1,14 @@
 
 .highlight { 
-    background: #e8e8e8;
-    border: 1px solid #ccc;
-    color: #222 ;
-    padding: 0.2em 0.9em;
-    margin: 1em 0;
-    font: normal normal normal 115%/normal 'Monaco', 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace !important;
-    line-height: 1.1em;
-    overflow: auto;
-    font-size: 1.0em;
+  background: #263238;
+  border: 1px solid #ccc;
+  color: #222 ;
+  padding: 0.2em 0.9em;
+  margin: 1em 0;
+  line-height: 1.1em;
+  overflow: auto;
+  font-size: 1.0em;
+  width: 100%;
 }
 
 
@@ -20,26 +20,25 @@ code, pre {
 
 .highlight span
 {
-font-family: "Consolas", "Courier New", "Courier", "FreeMono", monospace;
 font-size:1em;
 }
 
-.highlight  { color: #4d4d4c }
-.highlight .c { color: #4d4d4c } /* Comment */
+.highlight  { color: #eceff1 }
+.highlight .c { color: #eceff1 } /* Comment */
 .highlight .err { color: #c82829; background-color: #222 } /* Error */
-.highlight .k { color: #4271ae } /* Keyword */
+.highlight .k { color: #ffc107 } /* Keyword */
 .highlight .l { color: #ae81ff } /* Literal */
 .highlight .n { color: #f8f8f2 } /* Name */
 .highlight .o { color: #4271ae } /* Operator */
-.highlight .p { color: #4d4d4c } /* Punctuation */
+.highlight .p { color: #fff } /* Punctuation */
 .highlight .cm { color: #75715e } /* Comment.Multiline */
 .highlight .cp { color: #75715e } /* Comment.Preproc */
 .highlight .c1 { color: #75715e } /* Comment.Single */
 .highlight .cs { color: #75715e } /* Comment.Special */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .kc { color: #4d4d4d } /* Keyword.Constant */
-.highlight .kd { color: #8959a8 } /* Keyword.Declaration */
+.highlight .kc { color: #ff8f00 } /* Keyword.Constant */
+.highlight .kd { color: #f50057 } /* Keyword.Declaration */
 .highlight .kn { color: #f92672 } /* Keyword.Namespace */
 .highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
 .highlight .kr { color: #66d9ef } /* Keyword.Reserved */
@@ -57,7 +56,7 @@ font-size:1em;
 .highlight .nf { color: #a6e22e } /* Name.Function */
 .highlight .nl { color: #f8f8f2 } /* Name.Label */
 .highlight .nn { color: #f8f8f2 } /* Name.Namespace */
-.highlight .nx { color: #c82829 } /* Name.Other */
+.highlight .nx { color: #5677fc } /* Name.Other */
 .highlight .py { color: #f8f8f2 } /* Name.Property */
 .highlight .nt { color: #f92672 } /* Name.Tag */
 .highlight .nv { color: #f8f8f2 } /* Name.Variable */
@@ -70,7 +69,7 @@ font-size:1em;
 .highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
 .highlight .sc { color: #e6db74 } /* Literal.String.Char */
 .highlight .sd { color: #e6db74 } /* Literal.String.Doc */
-.highlight .s2 { color: #718c00 } /* Literal.String.Double */
+.highlight .s2 { color: #a6baff } /* Literal.String.Double */
 .highlight .se { color: #ae81ff } /* Literal.String.Escape */
 .highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
 .highlight .si { color: #e6db74 } /* Literal.String.Interpol */
@@ -79,7 +78,7 @@ font-size:1em;
 .highlight .s1 { color: #718c00 } /* Literal.String.Single */
 .highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
 .highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
+.highlight .vc { color: #c6ff00 } /* Name.Variable.Class */
 .highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
 .highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
 .highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
