Added correct links for Jekyll Guide as well as new styles. Fixes #7

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -3,6 +3,10 @@
   
   <h1 class="off-screen site__header--headline">{{ page.title }}</h1>
 
+{% elsif page.layout == 'guide' %}
+
+ <h1 class="off-screen site__header--headline">{{ page.title }}</h1>
+
 {% else %}
 <h1 class="off-screen  site__header--headline">Hi, I am Kevin</h1>
     
