--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Front-End Developer from Frankfurt, Germany. I write about CSS, HTML, JS and UI/X.">
     <meta name="keywords" content="front-end,web,dev,development,frankfurt,germany,blog,writing,ui,ux,beginner,sass,scss,html,css,javascript">
     <meta name="viewport" content="width=device-width">
+    <!-- This gives Android 5.0 users some neat colors to their Chrome tabs in the multi-task window! -->
+    <meta name="theme-color" content="#5677fc">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@_kevinatari">
