Removed past events; added if check for events and display a no-events message if there are no

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,9 +1,16 @@
 <section class="box  events">
 	<h3 class="event__headline">Events</h3>
-	<p class="event__description">A list of events I'll attend to. Come and say hi!</p>
 	
+  {% if site.data.events %}
+  <p class="event__description">A list of events I'll attend to. Come and say hi!</p>
+  {% else %}
+  <p class="event__description">Currently there are no new events I'll attend. Know a good event? <a
+    href="http://twitter.com/_kevinatari">invite me!</a></p>
+  {% endif %}
+
+
 	{% for event in site.data.events %}
-	
+
 	<article class="event">
 			<h4 class="event__headline"><a href="{{event.url}}">{{event.name}}</a></h4>
 			<p class="event__description">{{event.description}}</p>
