[DEV] - Experimental new header (+ new colors)

--- a/assets/css/core/_vars.scss
+++ b/assets/css/core/_vars.scss
@@ -8,7 +8,7 @@ $font-weight--medium: 500;
 
 /* Colors */
 /* blue */
-$color--main: #5677fc;
-$color--contrast: #f50057;
+$color--main: #1976D2;
+$color--contrast: #C6FF00; // #f50057;
 $color--accent: #263238;
 /* used for decoration and accents */
