--- a/assets/css/core/_helper.scss
+++ b/assets/css/core/_helper.scss
@@ -30,7 +30,7 @@
   background: #fff;
   padding: 2em 0;
   box-shadow: 2px 2px 10px rgba(0,0,0, .4); 
-
+  transform: translateZ(1px);
   @include breakpoint("small") {
     padding: 1em 0;
   }
