--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -1,7 +1,7 @@
 .site__header {
     width: 100%;
     height: auto;
-    padding: 2.5em;
+    padding: 2.5em 2.5em 0 2.5em;
     background: $color--main;;
     color: #fff;
 
