small visual adjustments; FIXES #11

--- a/assets/css/core/_vars.scss
+++ b/assets/css/core/_vars.scss
@@ -1,6 +1,6 @@
 /* Fonts */
-$font--sans: 'Roboto', sans-serif; 
-$font--serif: 'Roboto', sans-serif;
+$font--sans: 'Roboto', Arial, sans-serif; 
+$font--serif: 'Roboto', Arial, sans-serif;
 
 $font-weight--light: 300;
 $font-weight--medium: 500;
@@ -11,4 +11,3 @@ $font-weight--medium: 500;
 $color--main: #1976D2;
 $color--contrast: #C6FF00; // #f50057;
 $color--accent: #263238;
-/* used for decoration and accents */
