--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,8 +24,9 @@
 }
 
 body {
-  font:1em/1.65 $font--sans;
+  font:1em/1.65 Arial, Helvetica, sans-serif; //$font--sans;
   width:100%;
+  font-weight: 300;
   min-height:100%;
   background: #eee;
   overflow-x: hidden;
