pushing changes from the past weeks. yay. \o/

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -5,7 +5,7 @@
   <p class="event__description">A list of events I'll attend to. Come and say hi!</p>
   {% else %}
   <p class="event__description">Currently there are no new events I'll attend. Know a good event? <a
-    href="http://twitter.com/_kevinatari">invite me!</a></p>
+    href="http://twitter.com/_kevinatari">Invite me!</a></p>
   {% endif %}
 
 
