--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 // Add a script element as a child of the body
 function downloadJSOnload() {
 var element = document.createElement('script');
-element.src = '/assets/js/main.min.js';
+element.src = '/assets/js/main.js';
 document.body.appendChild(element);
 }
 // Check for browser support of event handling capability
