--- a/_layouts/front-page.html
+++ b/_layouts/front-page.html
@@ -4,7 +4,7 @@
     {% for post in site.posts  | limit: 10 %}  
 
     <article class="article box">
-        <h2 class="article--headline"><a href="{{ post.url }}" title="Read the article '{{ post.title }}'">{{ post.title }}</a></h2>
+      <h2 class="article--headline" data-article-id="{{ post.id }}"><a href="{{ post.url }}" title="Read the article '{{ post.title }}'">{{ post.title }}</a></h2>
         <span class="off-screen  {{ post.category }}">{{ post.category }}</span>
         {{ post.excerpt }}
         <p><a href="{{ post.url }}" title="Read more">Read more &rarr; </a></p>
