--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -7,22 +7,25 @@
         {% endif %}
     {% endfor %}
 <section class="block__page">
+<div class="gw tags">
 {% for i in (1..tags_max) reversed %}
     {% for tag in site.tags %}
         {% if tag[1].size == i %}
-            <article class="article__list">
-                <h3 id="{{ tag[0] | downcase | replace:' ','_' }}">{{ tag[0] }}</h3>
-                    <p>
+            <div class="g one-quarter medium-one-half small-one-whole">
+              <ul class="list tag-list">
+                <h3 id="{{ tag[0] | downcase | replace:' ','_' }}"
+                class="list--headline">{{ tag[0] }}</h3>
+                    
                     {% for post in tag.last %}
+                        <li>
                         <a href="{{ post.url }}">{{ post.title }}</a>
-                        {% if forloop.last %}
-                        {% else %} &bull; 
-                        {% endif %}
+                        </li>
                     {% endfor %}
-                    </p>
-            </article>
+              </ul>
+            </div>
         {% endif %}
     {% endfor %}
 {% endfor %}
+</div>
 </section>
 {% include footer.html %}
