Added styles for the new tag overview.

--- a/assets/css/core/_helper.scss
+++ b/assets/css/core/_helper.scss
@@ -26,11 +26,12 @@
 
 .wrapper {
   @extend .wrap;
-  margin-top: -2em;
+  margin-top: -2.1em;
   background: #fff;
   padding: 2em 0;
   box-shadow: 2px 2px 10px rgba(0,0,0, .4); 
-  transform: translateZ(1px);
+  position: relative;
+  z-index: 9999;
   @include breakpoint("small") {
     padding: 1em 0;
   }
