--- a/assets/css/core/_vars.scss
+++ b/assets/css/core/_vars.scss
@@ -9,5 +9,5 @@ $font-weight--medium: 500;
 /* Colors */
 /* blue */
 $color--main: #1976D2;
-$color--contrast: #C6FF00; // #f50057;
+$color--contrast: #E91E63; 
 $color--accent: #263238;
