Added new texts for CV and new layout component: cards.

--- a/assets/css/core/_typography.scss
+++ b/assets/css/core/_typography.scss
@@ -11,7 +11,7 @@ h3 {  font-size: 1.4em; }
 .article--headline {
     border-bottom: none !important;
 }
-.page--cv, .page--about {
+.page--about {
     h3 {
         margin-top: 2em;
     }
