--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@
         "modules/header",
         "modules/footer",
         "modules/article",
+        "modules/cards",
         "modules/list",
         "modules/boxes",
         "modules/events",
